# TorchJD

./: CHANGELOG.md  NOTICES  README.md  pyproject.toml
.github/actions/install-deps/: action.yml
.github/workflows/: check-links.yml  checks.yml
docs/source/: index.rst  installation.md
docs/source/docs/aggregation/: cr_mogm.rst  index.rst  modo.rst
docs/source/docs/scalarization/: constant.rst  dwa.rst  geometric_mean.rst  gls.rst  gmean.rst  imtl_l.rst  index.rst  mean.rst  pbi.rst  random.rst  stch.rst  sum.rst
src/torchjd/: _mixins.py
src/torchjd/_linalg/: _dual_cone.py
src/torchjd/aggregation/: __init__.py  _cagrad.py  _mixins.py  _modo.py  _nash_mtl.py
src/torchjd/scalarization/: __init__.py  _constant.py  _dwa.py  _famo.py  _geometric_mean.py  _gls.py  _gmean.py  _imtl_l.py  _mean.py  _pbi.py  _random.py  _scalarizer_base.py  _stch.py  _sum.py  _uw.py
tests/trajectories/: _plotters.py
tests/unit/: test_import_errors.py
tests/unit/aggregation/: test_cagrad.py  test_cr_mogm.py  test_dualproj.py  test_flattening.py  test_modo.py  test_nash_mtl.py  test_pcgrad.py  test_upgrad.py  test_values.py
tests/unit/autogram/: test_engine.py
tests/unit/autojac/: test_jac_to_grad.py
tests/unit/linalg/: test_dual_cone.py
tests/unit/scalarization/: test_constant.py  test_dwa.py  test_famo.py  test_geometric_mean.py  test_gls.py  test_gmean.py  test_imtl_l.py  test_pbi.py  test_random.py  test_stch.py
tests/utils/: optional_deps.py
