[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "torchjd"
version = "0.11.0"
description = "Library for Jacobian Descent with PyTorch."
readme = "README.md"
authors = [
    {name = "SimplexLab", email = "simplexlab0@gmail.com"},
    {name = "Valerian Rey", email = "valerian.rey@gmail.com"},
    {name = "Pierre Quinton", email = "pierre.quinton@gmail.com"}
]
requires-python = ">=3.10"
dependencies = [
    "torch>=2.3.0",  # Problems before 2.4.0, especially with autogram.
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
[project.license]
text = """
MIT License

Copyright (c) Valérian Rey, Pierre Quinton

Permission is hereby granted, free of charge, to any person obtaining a copy
of this software and associated documentation files (the "Software"), to deal
in the Software without restriction, including without limitation the rights
to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
copies of the Software, and to permit persons to whom the Software is
furnished to do so, subject to the following conditions:

The above copyright notice and this permission notice shall be included in all
copies or substantial portions of the Software.

THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
SOFTWARE.

This software includes third-party code. See the NOTICES file for the relevant
copyright notices and license texts.
"""

[project.urls]
Homepage = "https://torchjd.org/"
Documentation = "https://torchjd.org/"
Source = "https://github.com/SimplexLab/TorchJD"
Changelog = "https://github.com/SimplexLab/TorchJD/blob/main/CHANGELOG.md"

[dependency-groups]
check = [
    "ruff>=0.14.14",
    "ty>=0.0.14",
    "pre-commit>=2.9.2",  # isort doesn't work before 2.9.2
]

doc = [
    "sphinx>=6.0, !=7.2.0, !=7.2.1, !=7.2.3, !=7.2.4, !=7.2.5",  # Versions in [7.2.0, 7.2.5] have a bug with an internal torch import from _C
    "furo>=2023.0",  # Force it to be recent so that the theme looks better
    "tomli>=1.1",  # The load function doesn't work similarly before 1.1
    "sphinx-autodoc-typehints>=3.5.0",  # Bugged Union on Python 3.14 before 3.5.0
    "myst-parser>=3.0.1",  # Never tested lower versions
    "sphinx-design>=0.6.0",  # Never tested lower versions
    "docutils>=0.22.4",  # Never tested lower versions
    "lightning>=2.0.9",  # No OptimizerLRScheduler public type before 2.0.9
]

test = [
    "pytest>=7.3",  # Before version 7.3, not all tests are run
    "pytest-cov>=6.0.0",  # Recent version to avoid problems, could be relaxed
    "torchvision>=0.18.0"
]

plot = [
    "numpy>=1.21.2",  # Does not work before 1.21. No python 3.10 wheel before 1.21.2.
    "plotly[kaleido]>=5.19.0",  # Recent version to avoid problems, could be relaxed
    "dash>=2.16.0",  # Recent version to avoid problems, could be relaxed
    "matplotlib>=3.10.0",  # Recent version to avoid problems, could be relaxed
]
# Dependency group allowing to easily resolve version of the recommended dependencies to the lower
# bound.
lower_bounds = [
    "torch==2.3.0",
    "numpy==1.21.2",
    "quadprog==0.1.9",
    "qpsolvers==1.0.1",
]

[project.optional-dependencies]
quadprog_projector = [
    "numpy>=1.21.2",  # Does not work before 1.21. No python 3.10 wheel before 1.21.2.
    "quadprog>=0.1.9, != 0.1.10",  # Doesn't work before 0.1.9, 0.1.10 is yanked
    "qpsolvers>=1.0.1",  # Does not work before 1.0.1
]
nash_mtl = [
    "numpy>=1.21.2",  # Does not work before 1.21. No python 3.10 wheel before 1.21.2.
    "cvxpy>=1.3.0",  # Could be relaxed
    "ecos>=2.0.14",  # Does not work before 2.0.14
]
cagrad = [
    "numpy>=1.21.2",  # Does not work before 1.21. No python 3.10 wheel before 1.21.2.
    "cvxpy>=1.3.0",  # No Clarabel solver before 1.3.0
]
full = [
    "numpy>=1.21.2",  # Does not work before 1.21. No python 3.10 wheel before 1.21.2.
    "quadprog>=0.1.9, != 0.1.10",  # Doesn't work before 0.1.9, 0.1.10 is yanked
    "qpsolvers>=1.0.1",  # Does not work before 1.0.1
    "cvxpy>=1.3.0",  # No Clarabel solver before 1.3.0
    "ecos>=2.0.14",  # Does not work before 2.0.14
]

[tool.pytest.ini_options]
xfail_strict = true

[tool.coverage.report]
exclude_lines = [
    "pragma: not covered",
    "@overload",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle Error
    "F",    # Pyflakes
    "W",    # pycodestyle Warning
    "I",    # isort
    "UP",   # pyupgrade
    "ARG",  # flake8-unused-arguments
    "ANN",  # flake-8-annotations
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "FIX",  # flake8-fixme
    "TID",  # flake8-tidy-imports
    "SIM",  # flake8-simplify
    "RET",  # flake8-return
    "PYI",  # flake8-pyi
    "PIE",  # flake8-pie
    "COM",  # flake8-commas
    "PERF", # Perflint
    "FURB", # refurb
    "RUF",  # Ruff-specific rules
]

ignore = [
    "E501",    # line-too-long (handled by the formatter)
    "E402",    # module-import-not-at-top-of-file
    "RUF022",  # __all__ not sorted
    "RUF010",  # Use explicit conversion flag
    "RUF012",  # Mutable default value for class attribute (a bit tedious to fix)
    "RET504",  # Unnecessary assignment return statement
    "COM812",  # Trailing comma missing (conflicts with formatter, see https://github.com/astral-sh/ruff/issues/9216)
    "ANN401",  # Prevent annotating as Any (we rarely do that, and when we do it's hard to find an alternative)
]

[tool.ruff.lint.per-file-ignores]
"**/conftest.py" = ["ARG"]  # Can't change argument names in the functions pytest expects

[tool.ruff.lint.flake8-annotations]
suppress-dummy-args = true

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"

[tool.ty.src]
include = ["src", "tests"]
exclude = ["src/torchjd/aggregation/_nash_mtl.py"]
